Change in Title and Background
Change from my blog on Corsica to the subject of our website

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </head>
 <body>
   <header>
-    <img src="Corsica.jpg">
-    <h1> Blog on Corsica </h1>
+    <img src="mongolrally.jpg">
+    <h1> The Mongol Rally </h1>
     <ul>
       <li><a href="#">Pictures</a></li>
       <li><a href="#">Videos</a></li>
