New try of changing the background
New try

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
   header{
     text-align: center;
-    background: url(http://www.corsicatours.com/IMG/arton736.jpg);
+    background: <img src="mongol-rally.jpg" alt="mongol-rally">;
     background-size: cover;
     color: white;
   }
