Try change in background
First try in the background was a fail, this is a second try

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
   header{
     text-align: center;
-    background: <img src="mongol-rally.jpg" alt="mongol-rally">;
+    background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
     background-size: cover;
     color: white;
   }
