--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
   header{
     text-align: center;
-    background: url(https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwim1frPqJPhAhVMhxoKHdQrDvkQjRx6BAgBEAU&url=https%3A%2F%2Fmag.klif.cc%2F2018%2F06%2F26%2Fkcc-sponsors-a-mongol-rally-team%2F&psig=AOvVaw04WkljtE53bFmsKsSu22FX&ust=1553260552790796);
+    background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
     background-size: cover;
     color: white;
   }
