Change in the header
Change the image of the header and replaced it with the logo + change the tittle of paragraphs

--- a/index.html
+++ b/index.html
@@ -17,50 +17,61 @@
     text-align: center;
     background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
     background-size: cover;
-    color: white;
+    color: black;
   }
   h1 {
-    font-size: 70px
+    font-size: 80px
+  }
+  h2 {
+    font-size: 30px
+  }
+  h3 {
+    font-size: 30px
   }
   img {
     margin: auto;
-    border: 7px solid black;
-    border-radius:100px;
+    border: 5px solid black;
+    border-radius:20px;
   }
   </style>
 </head>
 <body>
   <header>
-    <img src="Corsica.jpg">
+    <img src="logo.png">
     <h1> The Mongol Rally </h1>
     <ul>
-      <li><a href="#">Pictures</a></li>
-      <li><a href="#">Videos</a></li>
-      <li><a href="#">Map</a></li>
+      <li><a href="#">About the rally</a></li>
+      <li><a href="#">Our story</a></li>
+      <li><a href="#"> Contact</a></li>
     </ul>
   </header>
   <article>
-    <h2> History of Corsica </h2>
+    <h2> About the Rally </h2>
 
-    <p> Remains of human occupation dating from at least the 3rd millennium BCE are evident in the many dolmens, menhirs, and other megalithic monuments that still stand on the island. The recorded history of Corsica begins about 560 BCE, when Greeks from Phocaea in Asia Minor founded the town of Alalia on the east coast. Carthaginian domination followed in the early 3rd century BCE, until the whole of the island was conquered by the Romans in a series of campaigns from 259 to 163 BCE. Together with Sardinia, Corsica formed a province of the Roman Empire, under which the island’s economy flourished. The Romans also implanted their language, which became the foundation of the present-day Corsican dialect. A series of invasions and partial occupations by the Vandals, Lombards, and Arabs followed between 450 and 1050 CE, during which time the island’s towns were destroyed, their inhabitants driven inland, and the coastal agricultural lands abandoned. The Byzantine Empire’s nominal suzerainty over Corsica from the mid-6th century was followed by the titular rule of the papacy from the mid-8th century onward. </p>
+    <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
 
-    <p> In 1077 the bishop of Pisa was entrusted by the papacy with the administration of Corsica, and over the next two centuries more than 300 churches were built in Corsica under the Pisans’ direction. Corsica then became a bone of contention between Pisa and Genoa (until 1284) and between Genoa and Aragon (from 1297 to 1434). Bitter struggles between the Genoese and Corsica’s native feudal aristocracy further decimated the population in the period 1434–53, after which Genoa was able to reassert its authority. A brief French occupation (1553–59) and a Corsican nationalist rebellion led by Sampiero Corso ended (1567) in renewed Genoese rule that lasted until 1729. Genoese rule, though by no means the worst in the island’s history, was notorious for its corrupt administration of justice, thereby encouraging Corsicans to resort to the private form of vengeance known as the vendetta. </p>
+    <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
+    <ol>
+      <li> Rally vehicles have a 1000cc engine limit </li>
+      <li> Rally teams are unsupported </li>
+      <li> Rally teams need to raise at least £1000 for charity </li>
+    </ol>
 
-    <p> A rebellion against Genoese rule in 1729 ushered in a period of turbulence and unrest that culminated in the establishment (1755) of a Corsican republic by the nationalist leader Pasquale Paoli. With Genoese control now confined to only a few coastal towns, Paoli organized the rest of Corsica as an independent democratic state and gave it a remarkably liberal constitution. During his 14 years of rule (until 1769), Paoli led the Corsicans in a great regenerative effort, repressing the vendetta, founding a university and printing press, and building a Corsican navy. In 1768, however, the despondent Genoese sold their rights on Corsica to France, and French troops subsequently invaded the island in overwhelming numbers. </p>
-
-    <p> Some weeks after Paoli had fled to England, Napoleon Bonaparte was born at Ajaccio on August 15, 1769. Corsica became a province of France that same year. Except for brief periods of occupation by the British (1794–96) and the Italians and Germans (1942–43), Corsica remained a French territory thereafter.</p>
+    <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
 
     <button> Like </button>
     </article>
 
     <article>
-      <h3> Food </h3>
+      <h3> Our Story </h3>
 
-      <p><strong>Aubergine à la Bonifacienne </strong></p>
+      <p><strong> Who are we? </strong></p>
 
       <p> Bonifacio is one of the most beautiful town on the French island of Corsica in the Mediterranean. It is magnificently situated on a promontory of the limestone coast of southern Corsica. Everywhere you looked restaurants were offering aubergines à la Bonifacienne. This is the local way to prepare eggplant: the eggplant is boiled, the flesh is scooped out and mixed with soaked bread, eggs, garlic, basil, and cheese. This mixture is stuffed back into the skin, and it is then fried in olive oil on both sides. The origin of this dish, as with many traditional recipes, is to use up leftover bread and cheese. This vegetarian dish is very tasty and is served as a main course rather than a side. </p>
 
-      <img src="th.jpg">
+      <p><strong> Sponsors </strong></p>
+
+      <p> Why do we need money from sponsors </p>
 
     <button> Like </button>
 
