--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <p> Why do we need money from sponsors </p>
 
-    <button> Like </button>
+    <button> Sponsor </button>
 
     </article>
 
