Try to change CSS
Added ul

--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <title>Home</title>
 <head>
-  <link href="/normalize.css" rel="stylesheet">
-  
+  <link href="/normalize.css" rel="stylesheet.css">
 </head>
 <body>
   <header>
     <img src="logo.png">
     <h1> The Mongol Rally </h1>
-    <ul>
-      <li><a href="#">About the rally</a></li>
-      <li><a href="#">Our story</a></li>
-      <li><a href="#"> Contact</a></li>
-    </ul>
   </header>
   <article>
     <h2> About the Rally </h2>
