--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <p> Why do we need money from sponsors </p>
 
     <button> Like </button>
-
+<button> Facebook </button> <button> Twitter </button> <button> Instagram </button> 
     </article>
 
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
