--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
       <p> Why do we need money from sponsors </p>
 
     <button> Like </button>
-<button> Facebook </button> <button> Twitter </button> <button> Instagram </button> 
+
+    <div>
+      <button> Facebook </button> <button> Twitter </button> <button> Instagram </button>
+    </div>
     </article>
 
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
