added social media buttons and centered them

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <button> Like </button>
 
     <div>
-      <button> Facebook </button> <button> Twitter </button> <button> Instagram </button>
+      <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
     </div>
     </article>
 
