Change in the name of CSS
Change in the name to make CSS work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Home</title>
 <head>
-  <link href="/normalize.css" rel="stylesheet.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
