Added ul + change in CSS
remove the style in the css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <header>
     <img src="logo.png">
     <h1> The Mongol Rally </h1>
+    <ul>
+   <li><a href="#">About the rally</a></li>
+   <li><a href="#">Our story</a></li>
+   <li><a href="#"> Contact</a></li>
+ </ul>
   </header>
   <article>
     <h2> About the Rally </h2>
@@ -36,7 +41,7 @@
       <p> Why do we need money from sponsors </p>
 
     <button> Sponsor </button>
-    
+
     </article>
 
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
