changed about section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <p><strong> Who are we? </strong></p>
 
-      <p> Bonifacio is one of the most beautiful town on the French island of Corsica in the Mediterranean. It is magnificently situated on a promontory of the limestone coast of southern Corsica. Everywhere you looked restaurants were offering aubergines à la Bonifacienne. This is the local way to prepare eggplant: the eggplant is boiled, the flesh is scooped out and mixed with soaked bread, eggs, garlic, basil, and cheese. This mixture is stuffed back into the skin, and it is then fried in olive oil on both sides. The origin of this dish, as with many traditional recipes, is to use up leftover bread and cheese. This vegetarian dish is very tasty and is served as a main course rather than a side. </p>
+      <p> We are a group of students from the UNiversity of Bath, United Kingdom. We decided to embark on the Mongol Rally to challenge ourselves... </p>
 
       <p><strong> Sponsors </strong></p>
 
