--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
+<!DOCTYPE html>
+
 <title>Home</title>
 <head>
-  <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
+
 <body>
   <header>
-<style>
-  header{
-      text-align: center;
-      background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
-      background-size: cover;
-      color: black;
-    }
-  </style>
     <img src="logo.png">
     <h1> The Mongol Rally </h1>
     <ul>
