Added a Nav Bar
Added a Nav Bar

--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav text-uppercase ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#About The Rally">About The Rally</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#Sponsors">Sponsors</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   <header>
     <img src="logo.png">
     <h1> The Mongol Rally </h1>
-    <ul>
-   <li><a href="#">About the rally</a></li>
-   <li><a href="#">Our story</a></li>
-   <li><a href="#"> Contact</a></li>
- </ul>
   </header>
   <article>
     <h2> About the Rally </h2>
