--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally">About The Rally</a>
+              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html">About The Rally</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
@@ -21,7 +21,7 @@
               <a class="nav-link js-scroll-trigger" href="#Sponsors">Sponsors</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact"><a href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
