Try to center background + text

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
       </div>
     </nav>
   <header>
-    <img src="logo.png">
-    <h1> The Mongol Rally </h1>
-  </header>
+    <header class="masthead">
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-lead-in">Welcome To Our Adventure</div>
+      <div class="intro-heading text-uppercase">The Mongol Rally</div>
+    </div>
+  </div>
+</header>
   <article>
     <h2> About the Rally </h2>
 
