changed link in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html">About The Rally</a>
+              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="#About the Rally">About The Rally</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
