--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       <div class="container">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="#About the Rally">About The Rally</a>
+              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="#intercontinental">About The Rally</a>
+
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
+              <a class="nav-link js-scroll-trigger" href="#Our Story"><a href="#embark">Our Story</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsors">Sponsors</a>
+              <a class="nav-link js-scroll-trigger" href="#Sponsors"><a href="#charity">Sponsors</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact"><a href="contact.html">Contact</a>
@@ -36,7 +37,7 @@
 </header>
   <article>
     <h2> About the Rally </h2>
-
+    <a name= "intercontinental"></a>
     <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
 
     <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
@@ -53,14 +54,14 @@
 
     <article>
       <h3> Our Story </h3>
-
+      <a name= "embark"></a>
       <p><strong> Who are we? </strong></p>
 
       <p> We decided embark on the Mongol rally as a way to challenge ourselves... We are a group of students form the University of Bath, United Kingdom. </p>
 
       <p><strong> Sponsors </strong></p>
-
-      <p> Why do we need money from sponsors </p>
+      <a name="charity"></a>
+      <p> Why do we need money from sponsors charity </p>
 
     <button> Sponsor </button>
 
