--- a/contact.html
+++ b/contact.html
@@ -2,32 +2,41 @@
 <html lang="en">
 <title>Home</title>
 <head>
-  <link rel="stylesheetcontact" type="text/css" href="css/stylesheetcontact.css">
+  <link rel="stylesheet" type="text/css" href="css contact/stylesheetcontact.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
+            <ul class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html">Home</a>
+            <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html">About The Rally</a>
-            </li>
-            <li class="nav-item">
+            </ul>
+            <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
-            </li>
-            <li class="nav-item">
+            </ul>
+            <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Sponsors">Sponsors</a>
-            </li>
-            <li class="nav-item">
+            </ul>
+            <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact"><a href="contact.html">Contact</a>
-            </li>
-          </ul>
+            </ul>
         </div>
-      </div>
     </nav>
+
 <header>
-  <h1> Contact </h1>
+    <header class="masthead">
+  <div class="container1">
+    <div class="intro-text">
+      <div class="intro-heading text-uppercase">Contact</div>
+    </div>
+  </div>
 </header>
+
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3iCL_tOvcD8OMpyKhiixCbgXqsys_C--WQhTGaa3cBidhVw/viewform?embedded=true" width="640" height="630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+<div>
+  <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';">Facebook</button> <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';">Twitter</button> <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';">Instagram</button></center>
+</div>
+  </body>
