added tagline at the bottom

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
     <div>
       <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
     </div>
+
+    <div>
+      <div class="container1">
+      CodeFirstGirls: Course Competition Spring 2019
+    </div>
     </article>
 
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
