--- a/contact.html
+++ b/contact.html
@@ -39,4 +39,9 @@
 <div>
   <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';">Facebook</button> <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';">Twitter</button> <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';">Instagram</button></center>
 </div>
+
+<div>
+  <div class="container2">
+  CodeFirstGirls: Course Competition Spring 2019
+</div>
   </body>
