--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,15 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html">Home</a>
+              <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html"><span>Home</span></a>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html">About The Rally</a>
+              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html"><span>About The Rally</span></a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
+              <a class="nav-link js-scroll-trigger" href="#Our Story"><span>Our Story</span></a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsors">Sponsors</a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact"><a href="contact.html">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#Sponsors"><span>Sponsors</span></a>
             </ul>
         </div>
     </nav>
@@ -29,7 +26,7 @@
     <header class="masthead">
   <div class="container1">
     <div class="intro-text">
-      <div class="intro-heading text-uppercase">Contact</div>
+      <div class="intro-heading text-uppercase"><container1>Contact</container1></div>
     </div>
   </div>
 </header>
@@ -37,7 +34,9 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3iCL_tOvcD8OMpyKhiixCbgXqsys_C--WQhTGaa3cBidhVw/viewform?embedded=true" width="640" height="630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 <div>
-  <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';">Facebook</button> <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';">Twitter</button> <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';">Instagram</button></center>
+  <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
+    <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
+    <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
 </div>
 
 <div>
