--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <header class="masthead">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-lead-in">Welcome To Our Adventure</div>
-      <div class="intro-heading text-uppercase">The Mongol Rally</div>
+      <div class="intro-lead-in"><span>Welcome To Our Adventure</span></div>
+      <div class="intro-heading text-uppercase"><span>The Mongol Rally</span></div>
     </div>
   </div>
 </header>
@@ -66,12 +66,12 @@
     <button> Sponsor </button>
 
     <div>
-      <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
+        <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';">Facebook</button> <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';">Twitter</button> <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';">Instagram</button></center>
     </div>
 
     <div>
       <div class="container1">
-      CodeFirstGirls: Course Competition Spring 2019
+      <center>CodeFirstGirls: Course Competition Spring 2019</center>
     </div>
     </article>
 
