change to social media buttons
index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <button> Sponsor </button>
 
     <div>
-        <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';">Facebook</button> <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';">Twitter</button> <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';">Instagram</button></center>
+      <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
+        <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
+        <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
     </div>
 
     <div>
