tried to add a carousel, it didnt work so i took away changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="#intercontinental">About The Rally</a>
-
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Our Story"><a href="#embark">Our Story</a>
@@ -32,10 +31,13 @@
     <div class="intro-text">
       <div class="intro-lead-in"><span>Welcome To Our Adventure</span></div>
       <div class="intro-heading text-uppercase"><span>The Mongol Rally</span></div>
+   </div>
+ </header>
     </div>
   </div>
 </header>
   <article>
+    <section id="About the Rally">
     <h2> About the Rally </h2>
     <a name= "intercontinental"></a>
     <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
