--- a/index.html
+++ b/index.html
@@ -1,60 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Home</title>
+<title>The Mongol Rally</title>
 <head>
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html">About The Rally</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Our Story">Our Story</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsors">Sponsors</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact"><a href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  <header>
-    <header class="masthead">
-  <div class="container">
-    <div class="intro-text">
-      <div class="intro-lead-in">Welcome To Our Adventure</div>
-      <div class="intro-heading text-uppercase">The Mongol Rally</div>
-    </div>
-  </div>
+<header>
+  <ul>
+  <li><a href="default.asp">About the Rally</a></li>
+  <li><a href="news.asp">Our Story</a></li>
+  <li><a href="contact.asp">Sponsors</a></li>
+  <li><a href="about.asp">Contact</a></li>
+</ul>
+<img src="logo.jpg">
+<h1> The Mongol Rally </h1>
+<h2> Welcome To Our Adventure </p>
 </header>
-  <article>
-    <h2> About the Rally </h2>
 
-    <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
+  <body>
+    <div>
+      <h3> About the Rally </h3>
 
-    <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
-    <ol>
+      <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
+
+      <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
+      <ol>
       <li> Rally vehicles have a 1000cc engine limit </li>
       <li> Rally teams are unsupported </li>
       <li> Rally teams need to raise at least £1000 for charity </li>
-    </ol>
+      </ol>
+      <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
+    </div>
 
-    <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
-
-    <button> Like </button>
-    </article>
-
-    <article>
-      <h3> Our Story </h3>
+    <div>
+      <h4> Our Story </h4>
 
       <p><strong> Who are we? </strong></p>
 
@@ -63,13 +42,11 @@
       <p><strong> Sponsors </strong></p>
 
       <p> Why do we need money from sponsors </p>
-
-    <button> Sponsor </button>
+    </div>
 
     <div>
       <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
     </div>
-    </article>
 
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
 </body>
