--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
       <h2> <p><strong> Our Story</strong></p> </h2>
       <center>
       <a name= "embark"></a>
-      <p> We decided embark on the Mongol rally as a way to challenge ourselves... We are a group of students form the University of Bath, United Kingdom. </p>
+      <p> With Sophie’s upbeat energy, Alana’s worldly knowledge, Annabelle’s intrepid sense of adventure and Jeanne’s ability to lead us all through it, we have come together as a team. The idea is to complete the rally this Summer 2019, whilst also raising money for charity. We are looking forward to travelling 10,000 miles halfway across the world, through approximately 13 countries. It will be a steep learning curve and the biggest challenge any of us have ever taken on, but the benefits will make it all worth it! </p>
 </center>
-    <h2> <p><strong> Sponsors </strong></p> </h2>
+    <h2> <p><strong> Sponsor Us </strong></p> </h2>
     <center>
       <a name="charity"></a>
-      <p> Why do we need money from sponsors charity </p>
+      <p> The rally has presented us with a wonderful opportunity to give back to planet Earth. The reality of climate change is no longer up for debate. It is the most pressing challenge facing our world today with forest loss playing a major part in this, contributing to more than 12% of all CO2 emissions. Keeping rainforest standing is the simplest and cheapest way to mitigate climate change, but despite this we are destroying the world’s rainforest at a faster rate than ever. Of the world’s remaining forests: 46% are fragmented, 30% are degraded and only 24% are intact. </p>
+
+      <p> Cool Earth works alongside rainforest communities to halt deforestation, and it believes the only way to halt destruction is to align the future of the rainforest with the people best placed to protect it. This means placing forest in the hands of the people who rely on its survival for their survival. Cool Earth works where the threat is greatest, with projects on the frontline of deforestation and they only work with villages that approach them, with the villages deciding how funds are spent and driving the partnership. These projects grow village by village to form a shield – protecting millions of acres of neighbouring forest. </p>
+
+      <p> The money donated through our JustGiving page goes directly to the charity. </p>
 </center>
     <button> Sponsor </button>
 </article>
