--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-  
+
 <header>
   <ul>
   <li><a href="default.asp">About the Rally</a></li>
@@ -20,11 +20,10 @@
 
   <body>
     <div>
-      <h3> About the Rally </h3>
-
-      <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
     <section id="About the Rally">
-      <h2> About the Rally </h2>
+      <center>
+      <h3> About the Rally </h3>
+      </center>
     <a name= "intercontinental"></a>
     <center>
     <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
@@ -38,37 +37,25 @@
     </div>
 
     <div>
-      <h4> Our Story </h4>
-
-      <p><strong> Who are we? </strong></p>
-
-      <p> We decided embark on the Mongol rally as a way to challenge ourselves... We are a group of students form the University of Bath, United Kingdom. </p>
-
-      <p><strong> Sponsors </strong></p>
-
-      <p> Why do we need money from sponsors </p>
-    </ol>
-    <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
-</center>
-    <button> Like </button>
-    </article>
-
-    <article>
-      <h2> <p><strong> Our Story</strong></p> </h2>
+      <section id="Our Story">
+        <center>
+        <h4> <p><strong> Our Story </strong></h4>
+        </center>
+      <a name= "Sophie"></a>
       <center>
-      <a name= "embark"></a>
-      <p> With Sophie’s upbeat energy, Alana’s worldly knowledge, Annabelle’s intrepid sense of adventure and Jeanne’s ability to lead us all through it, we have come together as a team. The idea is to complete the rally this Summer 2019, whilst also raising money for charity. We are looking forward to travelling 10,000 miles halfway across the world, through approximately 13 countries. It will be a steep learning curve and the biggest challenge any of us have ever taken on, but the benefits will make it all worth it! </p>
-</center>
-    <h2> <p><strong> Sponsor Us </strong></p> </h2>
-    <center>
+        <p> With Sophie’s upbeat energy, Alana’s worldly knowledge, Annabelle’s intrepid sense of adventure and Jeanne’s ability to lead us all through it, we have come together as a team. The idea is to complete the rally this Summer 2019, whilst also raising money for charity. We are looking forward to travelling 10,000 miles halfway across the world, through approximately 13 countries. It will be a steep learning curve and the biggest challenge any of us have ever taken on, but the benefits will make it all worth it! </p>
+      </center>
+      <center>
+        <h5> <p><strong> Sponsor Us </strong></p> </h5>
+      </center>
       <a name="charity"></a>
-      <p> The rally has presented us with a wonderful opportunity to give back to planet Earth. The reality of climate change is no longer up for debate. It is the most pressing challenge facing our world today with forest loss playing a major part in this, contributing to more than 12% of all CO2 emissions. Keeping rainforest standing is the simplest and cheapest way to mitigate climate change, but despite this we are destroying the world’s rainforest at a faster rate than ever. Of the world’s remaining forests: 46% are fragmented, 30% are degraded and only 24% are intact. </p>
+      <center>
+        <p> The rally has presented us with a wonderful opportunity to give back to planet Earth. The reality of climate change is no longer up for debate. It is the most pressing challenge facing our world today with forest loss playing a major part in this, contributing to more than 12% of all CO2 emissions. Keeping rainforest standing is the simplest and cheapest way to mitigate climate change, but despite this we are destroying the world’s rainforest at a faster rate than ever. Of the world’s remaining forests: 46% are fragmented, 30% are degraded and only 24% are intact. </p>
 
-      <p> Cool Earth works alongside rainforest communities to halt deforestation, and it believes the only way to halt destruction is to align the future of the rainforest with the people best placed to protect it. This means placing forest in the hands of the people who rely on its survival for their survival. Cool Earth works where the threat is greatest, with projects on the frontline of deforestation and they only work with villages that approach them, with the villages deciding how funds are spent and driving the partnership. These projects grow village by village to form a shield – protecting millions of acres of neighbouring forest. </p>
+        <p> Cool Earth works alongside rainforest communities to halt deforestation, and it believes the only way to halt destruction is to align the future of the rainforest with the people best placed to protect it. This means placing forest in the hands of the people who rely on its survival for their survival. Cool Earth works where the threat is greatest, with projects on the frontline of deforestation and they only work with villages that approach them, with the villages deciding how funds are spent and driving the partnership. These projects grow village by village to form a shield – protecting millions of acres of neighbouring forest. </p>
 
-      <p> The money donated through our JustGiving page goes directly to the charity. </p>
-</center>
-    <button> Sponsor </button>
+        <p> The money donated through our JustGiving page goes directly to the charity. </p>
+      </center>
 </article>
     <div>
       <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
@@ -79,7 +66,7 @@
     <div>
       <div class="container1">
       <center>CodeFirstGirls: Course Competition Spring 2019</center>
-    </div>  
-      
+    </div>
+
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
 </body>
