Try to fix the page

--- a/index.html
+++ b/index.html
@@ -1,89 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Home</title>
+<title>The Mongol Rally</title>
 <head>
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-      <div class="container">
-          <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="#intercontinental">About The Rally</a>
-            </li>
-            <li class="nav-item">
-
-              <a class="nav-link js-scroll-trigger" href="#Our Story"><a href="#embark">Our Story</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsors"><a href="#charity">Sponsors</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact"><a href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  <header>
-    <header class="masthead">
-  <div class="container">
-    <div class="intro-text">
-      <div class="intro-lead-in"><span>Welcome To Our Adventure</span></div>
-      <div class="intro-heading text-uppercase"><span>The Mongol Rally</span></div>
-   </div>
- </header>
-    </div>
-  </div>
+<header>
+  <ul>
+  <li><a href="default.asp">About the Rally</a></li>
+  <li><a href="news.asp">Our Story</a></li>
+  <li><a href="contact.asp">Sponsors</a></li>
+  <li><a href="about.asp">Contact</a></li>
+</ul>
+<img src="logo.jpg">
+<h1> The Mongol Rally </h1>
+<h2> Welcome To Our Adventure </p>
 </header>
-  <article>
-<<<<<<< HEAD
-    <section id="About the Rally">
-    <h2> About the Rally </h2>
-=======
-    <h2> <p><strong> About the Rally </strong></p> </h2>
->>>>>>> master
-    <a name= "intercontinental"></a>
-    <center>
-    <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
 
-    <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
-    <ol>
+  <body>
+    <div>
+      <h3> About the Rally </h3>
+
+      <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
+
+      <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
+      <ol>
       <li> Rally vehicles have a 1000cc engine limit </li>
       <li> Rally teams are unsupported </li>
       <li> Rally teams need to raise at least £1000 for charity </li>
-    </ol>
-
-    <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
-</center>
-    <button> Like </button>
-    </article>
-
-    <article>
-      <h2> <p><strong> Our Story</strong></p> </h2>
-      <center>
-      <a name= "embark"></a>
-      <p> We decided embark on the Mongol rally as a way to challenge ourselves... We are a group of students form the University of Bath, United Kingdom. </p>
-</center>
-    <h2> <p><strong> Sponsors </strong></p> </h2>
-    <center>
-      <a name="charity"></a>
-      <p> Why do we need money from sponsors charity </p>
-</center>
-    <button> Sponsor </button>
-</article>
-<div>
-  <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
-    <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
-    <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
-</div>
+      </ol>
+      <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
+    </div>
 
     <div>
-      <div class="container1">
-      <center>CodeFirstGirls: Course Competition Spring 2019</center>
-    </div>
+      <h4> Our Story </h4>
+
+      <p><strong> Who are we? </strong></p>
+
+      <p> We decided embark on the Mongol rally as a way to challenge ourselves... We are a group of students form the University of Bath, United Kingdom. </p>
+
+      <p><strong> Sponsors </strong></p>
+
+      <p> Why do we need money from sponsors </p>
+
+    </center>
+        <h2> <p><strong> Sponsors </strong></p> </h2>
+        <center>
+          <a name="charity"></a>
+          <p> Why do we need money from sponsors charity </p>
+    </center>
+        <button> Sponsor </button>
     </article>
+    <div>
+      <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
+        <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
+        <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
+    </div>
+
+    </div>
+    <div>
+          <div class="container1">
+          <center>CodeFirstGirls: Course Competition Spring 2019</center>
+          <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
+        </div>
+
+    <div>
+      <center><button> Facebook </button> <button> Twitter </button> <button> Instagram </button></center>
+    </div>
 
     <script> $ ("button").on("click", function(){alert("clicked!")})</script>
 </body>
