text added and jump down links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <header>
   <ul>
-  <li><a href="default.asp">About the Rally</a></li>
-  <li><a href="news.asp">Our Story</a></li>
-  <li><a href="contact.asp">Sponsors</a></li>
+  <li><a href="#About the Rally""default.asp">About the Rally</a></li>
+  <li><a href="#Our Story""news.asp">Our Story</a></li>
+  <li><a href="#Sponsor Us""contact.asp">Sponsor Us</a></li>
   <li><a href="about.asp">Contact</a></li>
 </ul>
 <img src="logo.jpg">
@@ -28,11 +28,13 @@
     <center>
     <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
       <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
-      <ol>
+      <p>
+        <ol type="1">
       <li> Rally vehicles have a 1000cc engine limit </li>
       <li> Rally teams are unsupported </li>
       <li> Rally teams need to raise at least £1000 for charity </li>
-      </ol>
+        </ol>
+      </p>
       <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
     </div>
 
@@ -48,7 +50,7 @@
       <center>
         <h5> <p><strong> Sponsor Us </strong></p> </h5>
       </center>
-      <a name="charity"></a>
+      <a name="wonderful"></a>
       <center>
         <p> The rally has presented us with a wonderful opportunity to give back to planet Earth. The reality of climate change is no longer up for debate. It is the most pressing challenge facing our world today with forest loss playing a major part in this, contributing to more than 12% of all CO2 emissions. Keeping rainforest standing is the simplest and cheapest way to mitigate climate change, but despite this we are destroying the world’s rainforest at a faster rate than ever. Of the world’s remaining forests: 46% are fragmented, 30% are degraded and only 24% are intact. </p>
 
