--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <center>
         <h5> <p><strong> Sponsor Us </strong></p> </h5>
       </center>
-      <a name="wonderful"></a>
+      <a name="charity"></a>
       <center>
         <p> The rally has presented us with a wonderful opportunity to give back to planet Earth. The reality of climate change is no longer up for debate. It is the most pressing challenge facing our world today with forest loss playing a major part in this, contributing to more than 12% of all CO2 emissions. Keeping rainforest standing is the simplest and cheapest way to mitigate climate change, but despite this we are destroying the world’s rainforest at a faster rate than ever. Of the world’s remaining forests: 46% are fragmented, 30% are degraded and only 24% are intact. </p>
 
