--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <center>
         <p> With Sophie’s upbeat energy, Alana’s worldly knowledge, Annabelle’s intrepid sense of adventure and Jeanne’s ability to lead us all through it, we have come together as a team. The idea is to complete the rally this Summer 2019, whilst also raising money for charity. We are looking forward to travelling 10,000 miles halfway across the world, through approximately 13 countries. It will be a steep learning curve and the biggest challenge any of us have ever taken on, but the benefits will make it all worth it! </p>
       </center>
+    <section id="Sponsor Us">
       <center>
         <h5> <p><strong> Sponsor Us </strong></p> </h5>
       </center>
