changed page links so they work from the contact page

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-  
+
 <header>
   <ul>
   <li><a href="#About the Rally""default.asp">About the Rally</a></li>
   <li><a href="#Our Story""news.asp">Our Story</a></li>
   <li><a href="#Sponsor Us""contact.asp">Sponsor Us</a></li>
-  <li><a href="about.asp">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 <img src="logo.jpg">
 <h1> The Mongol Rally </h1>
@@ -60,7 +60,7 @@
         <p> The money donated through our JustGiving page goes directly to the charity. </p>
       </center>
 </article>
-    
+
     <div>
       <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
         <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
