--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-  
+
 <header>
   <ul>
   <li><a href="#About the Rally""default.asp">About the Rally</a></li>
   <li><a href="#Our Story""news.asp">Our Story</a></li>
   <li><a href="#Sponsor Us""contact.asp">Sponsor Us</a></li>
-  <li><a href="about.asp">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
-<img src="logo.jpg">
-<h1> The Mongol Rally </h1>
-<h2> Welcome To Our Adventure </p>
+<img class="logo" src="logo.jpg">
+<h1><span> The Mongol Rally </span></h1>
+<h2> <span>Welcome To Our Adventure </span></p>
 </header>
 
   <body>
     <div
     <section id="About the Rally">
       <center>
-      <h3> About the Rally </h3>
+      <h2> About the Rally </h2>
       </center>
     <a name= "intercontinental"></a>
     <center>
     <p> The Mongol Rally is an intercontinental car rally that begins in Europe and ends in Ulan Ude, Russia. The rally originally ended in Ulan Bator, Mongolia. However, to avoid punitive costs and taxes associated with vehicle imports and disposal, the rally now passes through Mongolia and ends in Ulan Ude. The principal launch is from Goodwood Circuit in the United Kingdom, with subsidiary starting points in the Czech Republic. </p>
-      <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally </p>
+      <p> It is described as the 'Greatest Adventure in the World' and sees on average 70% completion rate. There are three fundamental Rules of the Rally: </p>
       <p>
-        <ol type="1">
-      <li> Rally vehicles have a 1000cc engine limit </li>
-      <li> Rally teams are unsupported </li>
-      <li> Rally teams need to raise at least £1000 for charity </li>
+        <ol class="rules">
+      <ol> 1. Rally vehicles have a 1000cc engine limit </ol>
+      <ol> 2. Rally teams are unsupported </ol>
+      <ol> 3. Rally teams need to raise at least £1000 for charity </ol>
         </ol>
       </p>
       <p> The organizers ("The Adventurists") are careful to point out that racing on highways is illegal. There are other differences from mainstream rallies, particularly the fact that no support team is provided and no other arrangements are made such as for accommodation, maintenance, or fuel. </p>
@@ -41,7 +41,7 @@
     </div>
       <section id="Our Story">
         <center>
-        <h4> <p><strong> Our Story </strong></h4>
+        <h2> <p><strong> Our Story </strong></h2>
         </center>
       <a name= "Sophie"></a>
       <center>
@@ -49,7 +49,7 @@
       </center>
     <section id="Sponsor Us">
       <center>
-        <h5> <p><strong> Sponsor Us </strong></p> </h5>
+        <h2> <p><strong> Sponsor Us </strong></p> </h2>
       </center>
       <a name="charity"></a>
       <center>
@@ -60,13 +60,9 @@
         <p> The money donated through our JustGiving page goes directly to the charity. </p>
       </center>
 </article>
-    
-    <div>
       <center><button onclick="window.location.href = 'https://www.facebook.com/codefirstgirls/';"><img src="facebook icon.png" alt="Facebook" height="40" width="40"</button>
         <button onclick="window.location.href = 'https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor';"><img src="twitter icon.png" alt="Twitter" height="40" width="40"</button>
         <button onclick="window.location.href = 'https://www.instagram.com/codefirstgirls/';"><img src="instagram icon.png" alt="Instagram" height="40" width="40"</button></center>
-    </div>
-
     </div>
     <div>
 
@@ -74,5 +70,5 @@
       <center>CodeFirstGirls: Course Competition Spring 2019</center>
     </div>
 
-    <scmript> $ ("button").on("click", function(){alert("clicked!")})</script>
+    <script> $ ("button").on("click", function(){alert("clicked!")})</script>
 </body>
