changed contact page
so now flicks back to the home page

--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
             <ul class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Home"><a href="index.html"><span>Home</span></a>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="about.html"><span>About The Rally</span></a>
+              <a class="nav-link js-scroll-trigger" href="#About The Rally"><a href="index.html"><span>About The Rally</span>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Our Story"><span>Our Story</span></a>
+              <a class="nav-link js-scroll-trigger" href="#Our Story"><a href="index.html"><span>Our Story</span></a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Sponsors"><span>Sponsors</span></a>
+              <a class="nav-link js-scroll-trigger" href="#Sponsors"><a href="index.html"><span>Sponsors</span></a>
             </ul>
         </div>
     </nav>
